SAT-792: Puzzle game (#319)
* SAT-792: done

* run gofmt

* save

* boostrap puzzle game

* gofmt

* docs

* upd puzzle game package

* doc fix
